--- a/src/async_await/async_await/async_await.csproj
+++ b/src/async_await/async_await/async_await.csproj
@@ -15,11 +15,13 @@
     <Compile Remove="async_await_task_HowToUse\Program02.cs" />
     <Compile Remove="async_await_task_HowToUse\Program03.cs" />
     <Compile Remove="async_await_task_HowToUse\Program04.cs" />
+    <Compile Remove="async_await_task_HowToUse\Program05.cs" />
     <Compile Remove="async_await_task_HowToUse\Program06.cs" />
+    <Compile Remove="async_await_task_HowToUse\Program07.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="async_await_task_Principle\" />
+    <Folder Include="async_await_task_HowToUse\" />
     <Folder Include="thread_task\" />
   </ItemGroup>
 
